base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
  name: echo-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
  template:
    metadata:
      labels:
    spec:
      containers:
      - name: echo-env
        image: hashicorp/http-echo
        args:
          - -text
          - $(ENV)
        ports:
          - containerPort: 5678
