base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
